docs/api/qiskit-ibm-runtime/0.26/qiskit_ibm_runtime.options.ResilienceOptionsV2.mdx
---
title: ResilienceOptionsV2 (v0.26)
description: API reference for qiskit_ibm_runtime.options.ResilienceOptionsV2 in qiskit-ibm-runtime v0.26
in_page_toc_min_heading_level: 1
python_api_type: class
python_api_name: qiskit_ibm_runtime.options.ResilienceOptionsV2
---

# ResilienceOptionsV2

<Class id="qiskit_ibm_runtime.options.ResilienceOptionsV2" isDedicatedPage={true} github="https://github.com/Qiskit/qiskit-ibm-runtime/tree/stable/0.26/qiskit_ibm_runtime/options/resilience_options.py#L36-L99" signature="ResilienceOptionsV2(*args, **kwargs)" modifiers="class">
  Resilience options for V2 Estimator.

  **Parameters**

  *   **measure\_mitigation** – Whether to enable measurement error mitigation method. If you enable measurement mitigation, you can fine tune its noise learning by using [`measure_noise_learning`](#qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_noise_learning "qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_noise_learning"). See [`MeasureNoiseLearningOptions`](qiskit_ibm_runtime.options.MeasureNoiseLearningOptions "qiskit_ibm_runtime.options.MeasureNoiseLearningOptions") for all measurement mitigation noise learning options. Default: True.
  *   **measure\_noise\_learning** – Additional measurement noise learning options. See [`MeasureNoiseLearningOptions`](qiskit_ibm_runtime.options.MeasureNoiseLearningOptions "qiskit_ibm_runtime.options.MeasureNoiseLearningOptions") for all options.
  *   **zne\_mitigation** – Whether to turn on Zero Noise Extrapolation error mitigation method. If you enable ZNE, you can fine tune its options by using [`zne`](#qiskit_ibm_runtime.options.ResilienceOptionsV2.zne "qiskit_ibm_runtime.options.ResilienceOptionsV2.zne"). See [`ZneOptions`](qiskit_ibm_runtime.options.ZneOptions "qiskit_ibm_runtime.options.ZneOptions") for additional ZNE related options. Default: False.
  *   **zne** – Additional zero noise extrapolation mitigation options. See [`ZneOptions`](qiskit_ibm_runtime.options.ZneOptions "qiskit_ibm_runtime.options.ZneOptions") for all options.
  *   **pec\_mitigation** – Whether to turn on Probabilistic Error Cancellation error mitigation method. If you enable PEC, you can fine tune its options by using [`pec`](#qiskit_ibm_runtime.options.ResilienceOptionsV2.pec "qiskit_ibm_runtime.options.ResilienceOptionsV2.pec"). See [`PecOptions`](qiskit_ibm_runtime.options.PecOptions "qiskit_ibm_runtime.options.PecOptions") for additional PEC related options. Default: False.
  *   **pec** – Additional probabalistic error cancellation mitigation options. See [`PecOptions`](qiskit_ibm_runtime.options.PecOptions "qiskit_ibm_runtime.options.PecOptions") for all options.
  *   **layer\_noise\_learning** – Layer noise learning options. See [`LayerNoiseLearningOptions`](qiskit_ibm_runtime.options.LayerNoiseLearningOptions "qiskit_ibm_runtime.options.LayerNoiseLearningOptions") for all options.

  ## Attributes

  ### layer\_noise\_learning

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.layer_noise_learning" attributeTypeHint="LayerNoiseLearningOptions | Dict" attributeValue="FieldInfo(annotation=Union[LayerNoiseLearningOptions, Dict], required=False, default_factory=LayerNoiseLearningOptions)" />

  ### measure\_mitigation

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_mitigation" attributeTypeHint="UnsetType | bool" attributeValue="Unset" />

  ### measure\_noise\_learning

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.measure_noise_learning" attributeTypeHint="MeasureNoiseLearningOptions | Dict" attributeValue="FieldInfo(annotation=Union[MeasureNoiseLearningOptions, Dict], required=False, default_factory=MeasureNoiseLearningOptions)" />

  ### pec

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.pec" attributeTypeHint="PecOptions | Dict" attributeValue="FieldInfo(annotation=Union[PecOptions, Dict], required=False, default_factory=PecOptions)" />

  ### pec\_mitigation

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.pec_mitigation" attributeTypeHint="UnsetType | bool" attributeValue="Unset" />

  ### zne

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.zne" attributeTypeHint="ZneOptions | Dict" attributeValue="FieldInfo(annotation=Union[ZneOptions, Dict], required=False, default_factory=ZneOptions)" />

  ### zne\_mitigation

  <Attribute id="qiskit_ibm_runtime.options.ResilienceOptionsV2.zne_mitigation" attributeTypeHint="UnsetType | bool" attributeValue="Unset" />

  ## Methods
</Class>

